[project]
name = "mcp-credit-optimizer"
version = "5.1.0"
description = "AI Credit Optimizer MCP Server — Save 30-75% on AI credits with ZERO quality loss. Audited across 10,000+ scenarios."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SkillForge", email = "contact@skillforge.dev"}
]
keywords = ["mcp", "ai", "credits", "optimization", "agent", "claude", "cursor", "manus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/rafsilva85/manus-credit-optimizer"
Documentation = "https://github.com/rafsilva85/manus-credit-optimizer#readme"
Issues = "https://github.com/rafsilva85/manus-credit-optimizer/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["mcp_credit_optimizer*"]
